Fixed dropdown on mobile view to not load on page start

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,10 @@ nav a:hover {
     .more {
         display: none;
     }
+
+    .navbar {
+        display: none;
+    }
 }
 
 
@@ -783,5 +787,4 @@ footer {
         display: block;
     }
 }
-
 
